Add lastModified information & some docs
